<resources>
    <string name="app_name">FirebaseRegister</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="don_t_have_a_acccount">Don\'t have a acccount ?</string>
    <string name="sign_up">SIGN Up</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="next">Next</string>
</resources>